refactor: modificando classe para o java 17